<resources>
    <string name="app_name">Healthify</string>
    <string name="bmi_calculator_btn">BMI Calculator</string>
    <string name="daily_calary_calculator_btn">Daily Calorie Calculator</string>
    <string name="body_fat_cal_btn">body fat calculator</string>
    <string name="body_shape_cal_btn">Body shape calculator</string>
    <string name="helthify">Helthify</string>
    <string name="genderbtn">\@string/genderbtn</string>
    <string name="et_age">Enter Age</string>
    <string name="et_bust">Enter Bust</string>
    <string name="et_waist">Enter Waist</string>
    <string name="et_hip">Enter Hip</string>
    <string name="et_highhip">Enter Highhip</string>
    <string name="delete_toast">\@string/delete_toast</string>
    <string name="deleteBtn">Delete</string>
    <string name="updateBtn">Update</string>
    <string name="Bust">"Bust "</string>
    <string name="Hip">Hip</string>
    <string name="waist">Waist</string>
    <string name="Age">Age</string>
    <string name="Highhip">HighHip</string>
    <string name="recordsstr">Record</string>
    <string name="updatebtn">Update</string>
    <string name="deletebtn">Delete</string>
    <string name="datestr">2022/10/27</string>
    <string name="genstr">Gender  -female</string>
    <string name="bustval">Bust   - 32</string>
    <string name="waistval">Waist  -30</string>
    <string name="hipval">Hip     -28</string>
    <string name="highHipval">HighHip   -27</string>
    <string name="ageval">Age    -23</string>
    <string name="agebtn">Age</string>
    <string name="bustbtn">Bust</string>
    <string name="waistbtn">Waist</string>
    <string name="hipbtn">Hip</string>
    <string name="higHipbtn">HighHip</string>
    <string name="calculatebtn">Add</string>
    <string name="addbtn">Add</string>
    <string name="malebtn">Male</string>
    <string name="femalebtn">Female</string>
    <string name="bust">Bust</string>
    <string name="hip">hip</string>
    <string name="highHip">highhip</string>
    <string name="age">age</string>
    <string name="myrecords_btn">My Records</string>
    <string name="CalculateMyBodyShapebtn">Calculate Body shape</string>
    <string name="MyRecordssbtn">My Records</string>
    <string name="malebtnn">Male</string>
    <string name="bustvalue">Bust</string>
    <string name="waistValue">Waist</string>
    <string name="hipValue">Hip     -  27</string>
    <string name="highHipValue">HighHip   - 26</string>
    <string name="agevalue">Age     -23</string>
    <string name="femalebtnn">Female</string>
    <string name="calculatebtnn">Calculate</string>
    <string name="waistvalue">Waist   -  29</string>
    <string name="bustvaluee">Bust       -31</string>
    <string name="resultStr">Results</string>
    <string name="shapeStr">Shape :</string>
    <string name="resultbtn">Results</string>
    <string name="cancelbtn">cancel</string>
    <string name="resultsbtn">Save Results</string>
    <string name="genderbtnn">Gender</string>

</resources>