<?xml version="1.0"  encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".results">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#034c81"
            app:title=" Body Shape calculation"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/resultStr"
        android:layout_width="168dp"
        android:layout_height="81dp"
        android:layout_marginTop="40dp"
        android:text="@string/resultStr"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <TextView
        android:id="@+id/shapeStr"
        android:layout_width="263dp"
        android:layout_height="83dp"
        android:layout_marginTop="8dp"
        android:text="@string/shapeStr"
        android:textColor="#E5355E"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.594"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultStr" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="441dp"
        android:layout_height="236dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="71dp"
        app:layout_constraintBottom_toTopOf="@+id/resultsbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shapeStr"
        app:srcCompat="@drawable/shapes" />

    <Button
        android:id="@+id/resultsbtn"
        android:layout_width="173dp"
        android:layout_height="83dp"
        android:layout_marginBottom="84dp"
        android:text="@string/resultsbtn"
        app:backgroundTint="#00ACC1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancelbtn"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancelbtn"
        android:layout_width="170dp"
        android:layout_height="84dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="80dp"
        android:text="@string/cancelbtn"
        app:backgroundTint="#00ACC1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

